# workspace

./: .gitignore
Html/Backend/: login.html
Html/Management/: index.css  index.html  index.js  main.css
SystemQt/: .gitignore
SystemQt/AdsModule/: CMakeLists.txt  adsmodule.cpp  adsmodule.h  adsmoduleprivate.cpp  adsmoduleprivate.h  adsmsgstruct.h
SystemQt/EcgTest/: EcgTest.pro  leadwire.json  main.cpp  mainwidget.cpp  mainwidget.h  vqueue.h  waveform.cpp  waveform.h
SystemQt/ICGControlModule/: ICGControlModule.pro  icgcontrolmodule.cpp  icgcontrolmodule.h  icgcontrolmoduleprivate.cpp  icgcontrolmoduleprivate.h  msgtype.h
SystemQt/IcgTest/: IcgTest.pro  main.cpp  mainwidget.cpp  mainwidget.h  waveform.cpp  waveform.h
SystemQt/IdCheck/: IdCheck.pro  idcheck.cpp  idcheck.h
SystemQt/JustATest/: JustATest.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
SystemQt/MgmtSystem/: MgmtSystem.pro  htmlclient.cpp  htmlclient.h  htmlserver.cpp  htmlserver.h  main.cpp
SystemQt/MqttServer/: MqttServer.pro  databasens.cpp  databasens.h  htmlclient.cpp  htmlclient.h  htmlserver.cpp  htmlserver.h  main.cpp  mqttclient.cpp  mqttclient.h  singleton.cpp  singleton.h  topicanalysis.cpp  topicanalysis.h  topicns.h  topicstruct.h  xml.qrc
SystemQt/ReportDataServer/: ReportDataServer.pro  clientworker.cpp  (+11 more)
SystemQt/ZeYaoTebco/: CMakeLists.txt  datacalculation.cpp  datacalculation.h  reportdatajson.cpp  reportdatajson.h  zeyaotebco.cpp  zeyaotebco.h  zeyaotebcoprivate.cpp  zeyaotebcoprivate.h
Vue/: .gitignore
commonFiles/: .gitignore  base.pri  config.pri  nicas.pri
(+555 files in other folders)
